syntax="proto3";

package company_service;
option go_package="genproto/company_service";

// import "google/protobuf/empty.proto";

service CompanyService {
    rpc Create(CreateCompanyRequest) returns (Company) {}
    rpc GetAll(GetAllCompanyRequest) returns (GetAllCompanyResponse) {}
    rpc GetById(Id) returns (Company) {}
    rpc Update(Company) returns (Company) {}
    rpc Delete(Id) returns (Id) {}
}

message CreateCompanyRequest {
    string name = 1;
}

message Id {
    string id = 1;
}

message Company {
    string id = 1;
    string name = 2;
}

message GetAllCompanyRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetAllCompanyResponse {
    repeated Company companys = 1;
    int32 count = 2;
}